@@ -1,3 +1,9 @@
+=== NEXT VERSION IN PROGRESS
+
+* Fixes:
+  - Make build script flexible so that doxygen isn't required, or can be in a different location. Thanks to: Bennett Smith
+
+
 == Version 2.0.1 ==
 12 May 2013
 
